// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers balanceReducer should handle FETCH_BALANCE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "channelBalance": null,
    "channelBalanceConfirmed": null,
    "channelBalancePending": null,
    "fetchBalanceError": null,
-   "isBalanceLoading": false,
+   "isBalanceLoading": true,
    "walletBalance": null,
    "walletBalanceConfirmed": null,
    "walletBalanceUnconfirmed": null,
  }
`;

exports[`reducers balanceReducer should handle FETCH_BALANCE_FAILURE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "channelBalance": null,
    "channelBalanceConfirmed": null,
    "channelBalancePending": null,
-   "fetchBalanceError": null,
+   "fetchBalanceError": "some error",
    "isBalanceLoading": false,
    "walletBalance": null,
    "walletBalanceConfirmed": null,
    "walletBalanceUnconfirmed": null,
  }
`;

exports[`reducers balanceReducer should handle FETCH_BALANCE_SUCCESS 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
-   "channelBalance": null,
-   "channelBalanceConfirmed": null,
-   "channelBalancePending": null,
+   "channelBalance": "2",
+   "channelBalanceConfirmed": "1",
+   "channelBalancePending": "1",
    "fetchBalanceError": null,
    "isBalanceLoading": false,
-   "walletBalance": null,
-   "walletBalanceConfirmed": null,
-   "walletBalanceUnconfirmed": null,
+   "walletBalance": "1",
+   "walletBalanceConfirmed": "1",
+   "walletBalanceUnconfirmed": "1",
  }
`;

exports[`reducers balanceReducer should handle initial state 1`] = `
Object {
  "channelBalance": null,
  "channelBalanceConfirmed": null,
  "channelBalancePending": null,
  "fetchBalanceError": null,
  "isBalanceLoading": false,
  "walletBalance": null,
  "walletBalanceConfirmed": null,
  "walletBalanceUnconfirmed": null,
}
`;
